--- a/index.HTML
+++ b/index.HTML
@@ -1,1 +1,1 @@
-<meta property="og:image" content="https://biolink.com.vn/uploads/block_images/a4ec6b18928f0cf3b1107f808ebc0ffb.jpg" />
+<meta property="og:image" content="https://external.flhe13-1.fna.fbcdn.net/emg1/v/t13/10256549074639328274?url=https%3A%2F%2Fcdn.branch.io%2Fbranch-assets%2F1670277361987-og_image.jpeg&fb_obo=1&utld=branch.io&stp=c0.5000x0.5000f_dst-jpg_flffffff_p500x500_q75&_nc_eui2=AeEYONBDZtKV-AuqVwV1M2lCSBFqKdZpqItIEWop1mmoi9ngBVSl2yFhMoSiV0SIOv4oSYc8ZYUDWdKRelgVQcOY&ccb=13-1&oh=06_AbHE3RsBtHw9r93UQPkQLc28KBJ-mv_DMBRCzfJqAHoDDA&oe=63C79F44&_nc_sid=7ca135" />
