--- a/index.HTML
+++ b/index.HTML
@@ -1,1 +1,1 @@
-<meta property="og:image" content="https://ucarecdn.com/8aadf5f2-7ed0-46ef-a2b2-3ed06ddc9211/"/>
+<meta property="og:image" content="blob:https://web.whatsapp.com/cd92ff5f-6f07-443e-8ef8-5d0a7de6fe12"/>
