--- a/index.HTML
+++ b/index.HTML
@@ -1,1 +1,1 @@
-<meta property="og:image" content="blob:https://web.whatsapp.com/cd92ff5f-6f07-443e-8ef8-5d0a7de6fe12"/>
+<meta property="og:image" content="https://web.whatsapp.com/cd92ff5f-6f07-443e-8ef8-5d0a7de6fe12"/>
